# video-transcribe-ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  audio_processor.py  dev-requirements.txt  model_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  subtitle_formatter.py  text_processor.py  transcribe.py
cli/: parser.py
core/: config.py  exceptions.py  logging.py  models.py  retry.py  utils.py  validation.py
services/: audio_service.py  model_service.py  subtitle_service.py  transcription_service.py  video_file_service.py
